--- a/site/package.json
+++ b/site/package.json
@@ -18,5 +18,8 @@
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "serialport": "^10.4.0"
+  },
+  "devDependencies": {
+    "hint": "^6.2.0"
   }
 }
